--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start-server": "node server.js",
     "preview": "vite preview",
     "lint": "eslint . --fix"
   },
   "dependencies": {
     "@fontsource/roboto": "5.2.5",
     "@mdi/font": "^7.4.47",
+    "axios": "^1.9.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vuetify": "^3.8.1"
