--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mdi/font": "^7.4.47",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "pg": "^8.16.0",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vuetify": "^3.8.1"
