--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres:password@localhost:5432/buildagarden
+DATABASE_URL=postgres://postgres:12345678@localhost:5432/postgres
