--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres:password@localhost:5432/buildagarden
+DATABASE_URL=postgres://postgres:YBLL@localhost:5432/buildagarden
